--- a/Site/Public/cadastro.html
+++ b/Site/Public/cadastro.html
@@ -60,13 +60,13 @@
             finalizarAguardar();
             return false;
         }
-        else if (nomeVar.length < 8) {
+        else if (nomeVar.length < 3) {
             swal("Ops", "O nome inserido é muito curto. Por favor, insira um nome com pelo menos 8 caracteres 😠", "warning")
         }
         else if (emailVar.indexOf("gmail") == -1 || emailVar.indexOf("@") == -1 || emailVar.indexOf(".com") == -1 || emailVar.length < 12) {
-            swal("Ops", "O e-mail cadastrado é inválido. Por favor, insira um e-mail válido 😠", "warning")
+            swal("Ops", "O e-mail cadastrado é inválido. Por favor, insira um e-mail com GMAIL 😠", "warning")
         }
-        else if (senhaVar.length < 10) {
+        else if (senhaVar.length < 3) {
             swal("Ops", "A senha inserida é muito curta. Por favor,insira uma senha com pelo menos 8 caracteres 😠", "warning")
         }
         else {
