Postagens de look criadas

--- a/Site/Public/Makeup.html
+++ b/Site/Public/Makeup.html
@@ -24,7 +24,7 @@
         
         <div class="postagem-tudo">
             <div class="postagem">
-                <h1>Tituo da postagem</h1>
+                <h1>Maquiagem para trabalho</h1>
                 <p>bbjlbjbjbjbj</p>
             </div>
             <div class="postagem">
@@ -43,12 +43,15 @@
                 <div class="container-slider">
                     <button id="prev-button"><img src="../Public/assets/Botão_de_avançar-remove.png" alt="prev-button"></button>
                     <div class="container-imagem">
-                        <img src="../Public/assets/Sthe.jpg" alt="oculos" class="slider on">
-                        <img src="../Public/assets/Imagem-sobre.jpg" alt="oculos" class="slider">
+                        <img src="../Public/assets/Produtos/2023-05-30 21_26_44.938-0300.jpg" alt="oculos" class="slider on">
+                    <img src="../Public/assets/Produtos/2023-05-30 21_24_50.803-0300.jpg" alt="oculos" class="slider">
+                    <img src="../Public/assets/Produtos/2023-05-30 21_21_41.042-0300.jpg" alt="oculos" class="slider">
+                    <img src="../Public/assets/Produtos/2023-05-30 21_30_23.260-0300.jpg" alt="oculos" class="slider">
                     </div>
                     <button id="next-button"><img src="../Public/assets/Botão_de_avançar-remove.png" alt="next-button"></button>
                 </div>
-                <p>ijbkjbkjbkj</p>
+                <p2>Óculos da loja <a class="links" target="_blank" href="https://br.pinterest.com/pin/668925350915787524/">LD acessórios</a> com desconto!</p>
+                    <p2>De xxx está por xxx</p>
             </div>
 
         
@@ -56,22 +59,22 @@
         <div class="inspiracoes">
             <div class="inspiracoes-pinterest">
                 <h2>Pinterest</h2>
-                <a class="links" href="https://br.pinterest.com/pin/668925350915787524/">Estilo elegante</a>
-                <a class="links" href="https://br.pinterest.com/lichi_brand/_saved/">Estilo casual</a>
+                <a class="links" target="_blank" href="https://br.pinterest.com/pin/668925350915787524/">Estilo elegante</a>
+                <a class="links" target="_blank" href="https://br.pinterest.com/lichi_brand/_saved/">Estilo casual</a>
                 </div>
 
             <div class="inspiracoes-mulheres">
                 <h2>Mulheres inspiradoras</h2>
                 <h3>YouTube</h3>
-                <a class="links" href="https://www.youtube.com/@VitoriaPortes">Vitória Portes</a>
-                <a class="links" href="https://www.youtube.com/@MyLifeAsLuanaCarolina">Luana Carolina</a>
-                <a class="links" href="https://www.youtube.com/@leticialt/featured">Letícia Teixeira</a>
+                <a class="links" target="_blank" href="https://www.youtube.com/@VitoriaPortes">Vitória Portes</a>
+                <a class="links" target="_blank" href="https://www.youtube.com/@MyLifeAsLuanaCarolina">Luana Carolina</a>
+                <a class="links" target="_blank" href="https://www.youtube.com/@leticialt/featured">Letícia Teixeira</a>
 
                 <h3>Instagram</h3>
-                <a class="links" href="https://www.instagram.com/helena.nataliee/">Helena Nataliee</a>
-                <a class="links" href="https://www.instagram.com/sophielouisesdiary/">Sophia Knight</a>
-                <a class="links" href="https://www.instagram.com/caterinavalentino/">Caterina Valentino</a>
-                <a class="links" href="https://www.instagram.com/drimartini/">Adriana Martini</a>
+                <a class="links" target="_blank" href="https://www.instagram.com/helena.nataliee/">Helena Nataliee</a>
+                <a class="links" target="_blank" href="https://www.instagram.com/sophielouisesdiary/">Sophia Knight</a>
+                <a class="links" target="_blank" href="https://www.instagram.com/caterinavalentino/">Caterina Valentino</a>
+                <a class="links" target="_blank" href="https://www.instagram.com/drimartini/">Adriana Martini</a>
             </div>
 
         </div>
