Retirando informações desnecessarias

--- a/Site/Public/Look.html
+++ b/Site/Public/Look.html
@@ -25,7 +25,7 @@
         <div class="postagem-tudo">
             <div class="postagem1">
                 <h1>Calça jeans</h1>
-                <p>É comum deixarmos dde usar a calça jeans, por termos receio de perder a elegancia do look. Entretando, ela é uma exelente peça, principalmente pelo fato de ser versatil, e trazer uma casualidade.
+                <p>É comum deixarmos de usar a calça jeans, por termos receio de perder a elegancia do look. Entretando, ela é uma exelente peça, principalmente pelo fato de ser versatil, e trazer uma casualidade.
                     </p><br>
                     <p>Apesar disso, algumas pessoas pecam no uso da calça jeans, pelo simples fato de estarem usando uma modelagem que não condiz com seu biotipo.<br>
                         <a class="links" target="_blank" href="https://www.comprarroupasatacado.com.br/blog/confira-os-cortes-de-jeans-que-valorizam-cada-biotipo/">Encontre a modelagem perfeita para o seu biotipo</a> 
@@ -86,7 +86,7 @@
                 <div class="container-slider">
                 <button id="prev-button"><img src="../Public/assets/Botão_de_avançar-remove.png" alt="prev-button"></button>
                 <div class="container-imagem">
-                    <img src="../Public/assets/Produtos/2023-05-30 21_26_44.938-0300.jpg" alt="oculos" class="slider on">
+                    <img src="assets/Produtos/2023-05-30 21_26_44.938-0300.jpg" alt="oculos" class="slider on">
                     <img src="../Public/assets/Produtos/2023-05-30 21_24_50.803-0300.jpg" alt="oculos" class="slider">
                     <img src="../Public/assets/Produtos/2023-05-30 21_21_41.042-0300.jpg" alt="oculos" class="slider">
                     <img src="../Public/assets/Produtos/2023-05-30 21_30_23.260-0300.jpg" alt="oculos" class="slider">
