--- a/Site/Public/cadastro.html
+++ b/Site/Public/cadastro.html
@@ -20,7 +20,7 @@
         Nome: <input id="nome_input" placeholder="Insira seu nome">
         Idade: <input id="idade_input" placeholder="Insira sua idade">
         E-mail: <input id="email_input" placeholder="Insira um email">
-        Senha: <input id="senha_input" placeholder="Insira uma senha">
+        Senha: <input id="senha_input" placeholder="Insira uma senha" type="password">
         Tem conhecimento sobre <br>Business Woman ou glow up?
         <select name="" id="conhecimento">
             <option value="1">Sim</option>
