--- a/Site/Public/index.html
+++ b/Site/Public/index.html
@@ -36,7 +36,7 @@
                     <h3>E-mail:</h3><input id="input_email" placeholder="Exemplo@email">
                 </div>
                 <div class="campo-senha">
-                    <h3>Senha:</h3> <input id="input_senha" placeholder="********">
+                    <h3>Senha:</h3> <input id="input_senha" placeholder="********" type="password">
                 </div>
                 <div class="botoes">
                     <button onclick="entrar()">Login</button>
