Curtir e descurtir das postagens feito

--- a/Site/Public/Inicio.html
+++ b/Site/Public/Inicio.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BW Style - Inicio</title>
-    <link rel="stylesheet" href="css/Inicio.css">
+    <link rel="stylesheet" href="css/inicio.css">
 
 </head>
 <body>
 
     <header class="cabecalho">
         <img class="img" src="assets/2.png" alt="">
-        <a class="cabecalho-opcoes-botoes" href="Inicio.html">Glow up</a>
+        <a class="cabecalho-opcoes-botoes" href="Glowup.html">Glow up</a>
         <a class="cabecalho-opcoes-botoes" href="Look.html">Look</a>
-        <a class="cabecalho-opcoes-botoes" href="Makeup.html">Makeup</a>
         <a class="cabecalho-opcoes-botoes" href="./dashboard/Dashboard.html">Dashboard</a>
 
     </header>
