--- a/Site/Public/index.html
+++ b/Site/Public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Seja uma business woman">
     <title>BW Style</title>
-    <link rel="stylesheet" type="text/css" href="css/Home.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
       <!-- Sweet alert-->
       <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
       <!-- Sweet alert -->
