--- a/Site/Public/dashboard/Dashboard.html
+++ b/Site/Public/dashboard/Dashboard.html
@@ -19,9 +19,8 @@
 
     <header class="cabecalho">
         <img class="img" src="../assets/2.png" alt="">
-        <a class="cabecalho-opcoes-botoes" href="../Inicio.html">Glow up</a>
-        <a class="cabecalho-opcoes-botoes" href="../Look.html">Look</a>
-        <a class="cabecalho-opcoes-botoes" href="../Makeup.html">Makeup</a>
+        <a class="cabecalho-opcoes-botoes" href="Glowup.html">Glow up</a>
+        <a class="cabecalho-opcoes-botoes" href="Look.html">Look</a>
         <a class="cabecalho-opcoes-botoes" href="./dashboard/Dashboard.html">Dashboard</a>
 
     </header>
@@ -33,17 +32,17 @@
     <div class="grafico-tudo">
 
         <div class="grafico">
-            <a>Idade dos usuarios</a>
+            <a>Idade dos usuários</a>
             <canvas id="myChart1"></canvas>
         </div>
 
         <div class="grafico-pizza">
-            <a>Conhecimento no assunto</a>
+            <a>Usuários que conhecem do assunto</a>
             <canvas id="myChart2"></canvas>
         </div>
 
         <div class="grafico">
-            <a>Conhecimento no assunto</a>
+            <a>Número de curtida das postagens</a>
             <canvas id="myChart3"></canvas>
         </div>
     </div>
@@ -54,15 +53,10 @@
 </html>
 <script>
 
-
-
-
-
     let proximaAtualizacao;
 
 
-
-
+ // grafico dois, com conhecimento dos usuários
     function obterDadosGrafico() {
 
         if (proximaAtualizacao != undefined) {
@@ -130,7 +124,7 @@
                 datasets: [{
                     label: 'Conhecimento',
                     data: [dados.datasets[1].data[0], dados.datasets[1].data[1], 0.000000001],
-                    borderWidth: 1
+                    borderWidth: 1,
                 }]
             },
             options: {
@@ -146,166 +140,88 @@
         });
     }
 
-  
 
 
+//  // grafico 1
+//     function obterDadosGrafico() {
 
-// O gráfico é construído com três funções:
-// 1. obterDadosGrafico -> Traz dados do Banco de Dados para montar o gráfico da primeira vez
-// 2. plotarGrafico -> Monta o gráfico com os dados trazidos e exibe em tela
-// 3. atualizarGrafico -> Atualiza o gráfico, trazendo novamente dados do Banco
-
-// Esta função *obterDadosGrafico* busca os últimos dados inseridos em tabela de medidas.
-// para, quando carregar o gráfico da primeira vez, já trazer com vários dados.
-// A função *obterDadosGrafico* também invoca a função *plotarGrafico*
-
-//     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
-//     Para ajustar o "select", ajuste o comando sql em src/models
-// function obterDadosGrafico(idAquario) {
-
-
-
-//     if (proximaAtualizacao != undefined) {
-//         clearTimeout(proximaAtualizacao);
-//     }
-
-//     fetch(`/medidas/idade/${idAquario}`, { cache: 'no-store' }).then(function (response) {
-//         if (response.ok) {
-//             response.json().then(function (resposta) {
-//                 console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
-//                 resposta.reverse();
-
-//                 plotarGrafico(resposta, idAquario);
-
-//             });
-//         } else {
-//             console.error('Nenhum dado encontrado ou erro na API');
-//         }
-//     })
-//         .catch(function (error) {
-//             console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
-//         });
+// if (proximaAtualizacao != undefined) {
+//     clearTimeout(proximaAtualizacao);
 // }
 
-// // Esta função *plotarGrafico* usa os dados capturados na função anterior para criar o gráfico
-// // Configura o gráfico (cores, tipo, etc), materializa-o na página e, 
-// // A função *plotarGrafico* também invoca a função *atualizarGrafico*
-// function plotarGrafico(resposta, idAquario) {
 
-//     console.log('iniciando plotagem do gráfico...');
+// fetch(`/medidas/idade/`, { cache: 'no-store' }).then(function (response) {
+//     if (response.ok) {
+//         response.json().then(function (resposta) {
+//             console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+//             plotarGrafico(resposta);
 
-//     // Criando estrutura para plotar gráfico - labels
-//     let labels = [];
+//         });
+//     } else {
+//         console.error('Nenhum dado encontrado ou erro na API');
+//     }
+// })
+//     .catch(function (error) {
+//         console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+//     });
+// }
 
-//     // Criando estrutura para plotar gráfico - dados
-//     let dados = {
-//         labels: labels,
-//         datasets: [{
-//             // label: 'Média do Quiz',
-//             data: [],
+// function plotarGrafico(resposta) {
+// console.log('iniciando plotagem do gráfico...');
+
+// var dados = {
+//     labels: [],
+//     datasets: [
+//         {
+//             label: '',
+//             data: []
 //         },
 //         {
-//             // label: 'Média',
-//             label: 'Média do Quiz', backgroundColor:['#ff4500'],
-//             data: [],
-//             yAxisID: 'y-mediaquiz',
+//             yAxisID: 'y-totalpersonagens',
+//             label: 'Número de usuário com determinada idade',
 //             fill: true,
-//             backgroundColor: ['#00f', '#FFFF00', '#FF4500', '#00FF00', '#4B0082', '#0000FF', '#FFF', '#ADD8e6', '#FF007F', '#008000','#25518399','#75C365','#240230140','#255'],
-//             tension: 0.1
-//         }]
-//     };
+//             data: []
+//         }
+//     ],
+// };
 
-//     console.log('----------------------------------------------')
-//     console.log('Estes dados foram recebidos pela funcao "obterDadosGrafico" e passados para "plotarGrafico":')
-//     console.log(resposta)
-
-//     // Inserindo valores recebidos em estrutura para plotar o gráfico
-//     for (i = 0; i < resposta.length; i++) {
-//         var registro = resposta[i];
-//         labels.push(registro.total_usuarios);
-//         dados.datasets[0].data.push(registro.total_usuarios);
-//         dados.datasets[1].data.push(registro.voto);
-//     }
-
-//     console.log('----------------------------------------------')
-//     console.log('O gráfico será plotado com os respectivos valores:')
-//     console.log('Labels:')
-//     console.log(labels)
-//     console.log('Dados:')
-//     console.log(dados.datasets)
-//     console.log('----------------------------------------------')
-
-//     // Criando estrutura para plotar gráfico - config
-//     const config = {
-//         type: 'bar',
-//         data: dados,
-//     };
-
-//     // Adicionando gráfico criado em div na tela
-//     let myChart2 = new Chart(
-//         document.getElementById(`myChart`),
-//         config
-//     );
-
-//     setTimeout(() => atualizarGrafico(idAquario, dados, myChart), 2000);
+// for (i = 0; i < resposta.length; i++) {
+//     var registro = resposta[i];
+//     dados.labels.push(registro.conhecimento);
+//     dados.datasets[0].data.push(registro.conhecimento);
+//     dados.datasets[1].data.push(registro.voto);
+//     console.log(registro.conhecimento);
 // }
 
+// var conhecimentoSim = "Sim";
+// var conhecimentoNao = "Não";
 
-// // Esta função *atualizarGrafico* atualiza o gráfico que foi renderizado na página,
-// // buscando a última medida inserida em tabela contendo as capturas, 
+// console.log(JSON.stringify(dados));
 
-// //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
-// //     Para ajustar o "select", ajuste o comando sql em src/models
-// function atualizarGrafico(idAquario, dados, myChart) {
+// const ctx = document.getElementById('myChart1');
 
-
-
-//     fetch(`/medidas/buscarquiz/${idAquario}`, { cache: 'no-store' }).then(function (response) {
-//         if (response.ok) {
-//             response.json().then(function (novoRegistro) {
-
-//                 obterdados(idAquario);
-//                 // alertar(novoRegistro, idAquario);
-//                 console.log(`Dados recebidos: ${JSON.stringify(novoRegistro)}`);
-//                 console.log(`Dados atuais do gráfico:`);
-//                 console.log(dados);
-
-//                 let avisoCaptura = document.getElementById(`avisoCaptura${idAquario}`)
-//                 avisoCaptura.innerHTML = ""
-
-
-//                 if (novoRegistro[0].momento_grafico == dados.labels[dados.labels.length - 1]) {
-//                     console.log("---------------------------------------------------------------")
-//                     console.log("Como não há dados novos para captura, o gráfico não atualizará.")
-//                     avisoCaptura.innerHTML = "<i class='fa-solid fa-triangle-exclamation'></i> Foi trazido o dado mais atual capturado pelo sensor. <br> Como não há dados novos a exibir, o gráfico não atualizará."
-//                     console.log("Horário do novo dado capturado:")
-//                     console.log(novoRegistro[0].momento_grafico)
-//                     console.log("Horário do último dado capturado:")
-//                     console.log(dados.labels[dados.labels.length - 1])
-//                     console.log("---------------------------------------------------------------")
-//                 } else {
-//                     // tirando e colocando valores no gráfico
-//                     dados.labels.push(novoRegistro[0].momento_grafico); // incluir um novo momento
-
-
-//                     dados.datasets[0].data.push(novoRegistro[0].umidade); // incluir uma nova medida de umidade
-
-
-//                     dados.datasets[1].data.push(novoRegistro[0].temperatura); // incluir uma nova medida de temperatura
+// new Chart(ctx, {
+//     type: 'line',
+//     data: {
+//         labels: [conhecimentoSim, conhecimentoNao],
+//         datasets: [{
+//             label: 'Idade',
+//             data: [dados.datasets[1].data[0], dados.datasets[1].data[1], 0.000000001],
+//             borderWidth: 1,
+//         }]
+//     },
+//     options: {
+//         scales: {
+//             y: {
+//                 ticks: {
+//                     min: 0,
+//                     max: 15
 //                 }
-
-//                 // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-//                 proximaAtualizacao = setTimeout(() => atualizarGrafico(idAquario, dados, myChart), 2000);
-//             });
-//         } else {
-//             console.error('Nenhum dado encontrado ou erro na API');
-//             // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-//             proximaAtualizacao = setTimeout(() => atualizarGrafico(idAquario, dados, myChart), 2000);
+//             }
 //         }
-//     })
-//         .catch(function (error) {
-//             console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
-//         });
+//     }
+// });
+// }
 
-
+  
 </script>
