--- a/Site/Public/Inicio.html
+++ b/Site/Public/Inicio.html
@@ -12,9 +12,11 @@
 
     <header class="cabecalho">
         <img class="img" src="assets/2.png" alt="">
-        <a class="cabecalho-opcoes-botoes" href="Glowup.html">Glow up</a>
+        <a class="cabecalho-opcoes-botoes" href="inicio.html">Glow up</a>
         <a class="cabecalho-opcoes-botoes" href="Look.html">Look</a>
         <a class="cabecalho-opcoes-botoes" href="./dashboard/Dashboard.html">Dashboard</a>
+        <a class="cabecalho-opcoes-botoes" href="../index.html">Sair</a>
+
 
     </header>
 
