--- a/Site/Public/Look.html
+++ b/Site/Public/Look.html
@@ -104,8 +104,7 @@
                 <h2>Produtos com desconto <br> da loja LD acessórios</h2>
 
                 <div class="container-slider">
-                    <button id="prev-button"><img src="../Public/assets/Botão_de_avançar-remove.png"
-                            alt="prev-button"></button>
+                    <button id="prev-button"><img src="assets/Botão_de_avançar-remove.png" alt="prev-button"></button>
                     <div class="container-imagem">
                         <img src="assets/Produtos/2023-05-30 21_26_44.938-0300.jpg" alt="oculos" class="slider on">
                         <img src="assets/Produtos/2023-05-30 21_24_50.803-0300.jpg" alt="oculos" class="slider">
@@ -169,7 +168,7 @@
     var total = valor - valor_descontado
     valordescontado.innerHTML = `O óculos que estava por R$${valor},00 agora está saindo por R$${total},00.`
 
-    // Funções do carrossel da page look e makeup
+    // Funções do carrossel da page look 
     const slider = document.querySelectorAll('.slider');
     const btnPrev = document.getElementById('prev-button');
     const btnNext = document.getElementById('next-button');
