--- a/Site/Public/index.html
+++ b/Site/Public/index.html
@@ -178,12 +178,12 @@ var senhaVar = input_senha.value;
 
 if (emailVar == "" || senhaVar == "") {
     // cardErro.style.display = "block"
-    swal("Ops", "Preencha os campos para logar 😠!", "error")
+    swal("Ops", "Preencha os campos", "error")
     finalizarAguardar();
     return false;
 }
 else {
-    swal("Parábens", "Login realizado com sucesso redirecionando a tela do quiz 😄se divirta...!", "success");
+    swal("Parábens", "Login correto", "success");
     setInterval('...', 2000)
 
 
